--- a/Projects and Certificates.html
+++ b/Projects and Certificates.html
@@ -6,6 +6,7 @@
 
   <header>
     <title>Gian Paolo Samortin's Projects & Certifications</title>
+    <link rel="stylesheet" href="css/master.css">
   </header>
 
   <body>
