--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
 
   <header>
     <title>Gian Paolo Samortin's Resume</title>
+    <link rel="stylesheet" href="css/master.css">
   </header>
 
   <body>
